# check_po

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.rst  ChangeLog  INSTALL  LICENCE  LICENSE  MANIFEST.in  README  README.rst  setup.cfg  setup.py  tox.ini
check_po/: __init__.py  _compat.py  check_urls.py  pochecker.py  podiff.py  utils.py
check_po/tests/: check_po.py  check_urls.py  podiff.py
