[aliases]
test = nosetests --with-coverage --cover-package=check_po

[nosetests]
nologcapture=1
all-modules=1
verbose=1
verbosity=2
cover-erase=1
no-path-adjustment=1

[metadata]
name = check_po
author = Rémy Hubscher
author_email = hubscher.remy@gmail.com
summary = Check_po to verify if everything is translated and that no fuzzy are still here.
description-file = README.rst
home-page = https://github.com/peopledoc/check_po
license = GPLv3+
classifier =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
keywords =
	translation
	po

[entry_points]
console_scripts =
    check_po = check_po.pochecker:main
    podiff = check_po.podiff:main
    check_urls = check_po.check_urls:main

[files]
packages =
	check_po

[bdist_wheel]
universal=1

[pbr]
warnerrors = True
